ManageTransaction_BLService:: happpy flow tested and minor modifications